[gd_scene load_steps=3 format=3 uid="uid://cxh2h8uhqy2xg"]

[ext_resource type="Theme" uid="uid://c78tfrjryojg6" path="res://ui/ui_theme.tres" id="1_mtxqf"]
[ext_resource type="Script" uid="uid://bdlxr4hm7tf6a" path="res://ui/pause_menu_ui.gd" id="2_pd0k7"]

[node name="PauseMenuUi" type="Control"]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 200.0
offset_top = 100.0
offset_right = -200.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_mtxqf")
script = ExtResource("2_pd0k7")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.054902, 0.054902, 0.054902, 0.843137)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -49.5
offset_right = 49.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 128
theme_override_constants/margin_right = 128

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/h_separation = 16
columns = 2

[node name="GameSpeedLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Game Speed"

[node name="GameSpeedSlider" type="HSlider" parent="MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 0.3
max_value = 1.5
step = 0.05
value = 1.0

[node name="MusicLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Music Voume"

[node name="MusicSlider" type="HSlider" parent="MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="SfxLabel" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "SFX Volume"

[node name="SfxSlider" type="HSlider" parent="MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[connection signal="value_changed" from="MarginContainer/VBoxContainer/GridContainer/GameSpeedSlider" to="." method="_on_game_speed_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/GridContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/GridContainer/SfxSlider" to="." method="_on_sfx_slider_value_changed"]
